# eeg

.vapor/color_box/: color_box.py  digi_usb.py  usb_led.py
.vapor/udp_c_test/: CMakeLists.txt  client.cpp  server.cpp
color_box_ctrl/: digi_usb.py
digi_color_box/: tk_color_check.py  usb_led.py
digispark_led/: digi_led.ino
emo_led_ctrl/: 00_prepare_data.py  01_build_model.py  02_run.py  config.py  eeg.py  emotiv_receiver.py  led.py  model
emo_led_ctrl/.vapor/emotiv/: data_set.py  file.py  receiver.py
emo_led_ctrl/.vapor/feature_extraction/: rythm.py
emo_led_ctrl/.vapor/hmi/: hmi.py
emo_led_ctrl/.vapor/pyemotiv/: client.py  server.py  stoppable_threaad.py  udp_test.py
emotiv_server/: CMakeLists.txt  config.h  edk_helpers.cpp  edk_helpers.h  emotiv_server.cpp  main.cpp  udp.cpp  udp.h
emotiv_server/config/: config.h
emotiv_server/emotiv/: edk_helpers.cpp  edk_helpers.h
hmi/: train_model.py
pyedk/: pyedk.py
pymotiv/neural_network/: neural_network.py
pymotiv/pyemotiv/: client.py  server.py  udp_test.py
tkeeg/: tkeeg.py
